[gd_scene load_steps=3 format=3 uid="uid://b3hoyangpmgmy"]

[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/DamSection/dam_construction.gd" id="1_3mei0"]
[ext_resource type="PackedScene" uid="uid://kvlpuirjyaao" path="res://Scenes/GameMainScreenScenes/GameScenes/DamSection/construction_item.tscn" id="1_qe463"]

[node name="DamConstruction" type="VBoxContainer"]
size_flags_vertical = 3
script = ExtResource("1_3mei0")

[node name="ConstructionLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Small Dam Construction"
horizontal_alignment = 1

[node name="MC2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MC2"]
layout_mode = 2
color = Color(0.396078, 0.396078, 0.396078, 1)

[node name="MC" type="MarginContainer" parent="MC2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="ConstructionHBox" type="HBoxContainer" parent="MC2/MC"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="ConstructionItem1" parent="MC2/MC/ConstructionHBox" instance=ExtResource("1_qe463")]
layout_mode = 2

[node name="ConstructionItem2" parent="MC2/MC/ConstructionHBox" instance=ExtResource("1_qe463")]
layout_mode = 2

[node name="ConstructionItem3" parent="MC2/MC/ConstructionHBox" instance=ExtResource("1_qe463")]
layout_mode = 2
